<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Übung</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_location"> Mapa Übung</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="choose_sport">Escoge Tu Deporte</string>
    <string name="title_activity_choose_sport">Deportes</string>
    <string name="titleUbungMobile">Übung Mobile</string>
    <string name="btnstart">Empezar</string>
    <string name="title_activity_description_sport">Descripción</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_inscripcion">Inscribir</string>
    <string name="title_activity_programacion">ProgramacionActivity</string>
    <string name="flip">&lt; Deslice</string>
    <string name="title_user">Übung</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_lista_zonas">Zonas de Deporte</string>
    <string name="info1"> Una Aplicación hecha para deportistas la cual te informa en que zonas estan practicando tu deporte.</string>
    <string name="info2">Übung Mobile te ayuda a practicar tu deporte en grupo con nuevos deportistas. \n Übung Mobile te hace la vida más Fácil.</string>
    <string name="bienvenida">Bienvenido a Übung Mobile</string>
    <string name="bienvenida2">Funciones de Übung</string>
    <string name="title_activity_user_registation">user_registation</string>
    <string name="description_titlle">descripcion:</string>
    <string name="title_activity_descripcion_programacion">DescripcionProgramacionActivity</string>
    <string name="title_organiza">Organiza:</string>
    <string name="organiza">organiza</string>
    <string name="title_inscritos">Inscritos:t</string>
    <string name="title_activity_evento">EventoActivity</string>
    <string name="title_crear_evento">Crear Evento</string>
    <string name="title_deporte_evento">Deporte: </string>
    <string name="title_zona_evento">Zona: </string>
    <string name="btn_crear">Crear Evento</string>
    <string name="title_fecha">Fecha:</string>
    <string name="btn_programacion">Programación</string>
    <string name="Registration">Registrarse</string>
    <string name="InicioSesion">Iniciar Sesion</string>
    <string name="action_register">Registrarse</string>
    <string name="title_activity_register">Registrar</string>
    <string name="title_hora">Hora:</string>
    <string name="title_activity_augmented_reality_">Realidad Aumentada</string>

</resources>
