<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ubung.tc.ubungmobile.controlador.EventoActivity"
    android:id="@+id/evento_register"
    android:background="@android:color/holo_orange_dark"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <ScrollView android:id="@+id/event_form" android:layout_width="match_parent"
        android:layout_height="match_parent">




    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_alignTop="@+id/event_form"
        android:weightSum="2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tittle_crear_evento"
        android:text="@string/title_crear_evento"
        android:textColor="#ffffffff"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_organiza"
        android:id="@+id/title_organiza_evento"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/tittle_crear_evento"
        android:layout_toStartOf="@+id/organiza_evento"
        android:textColor="#ffffffff"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/organiza"
        android:id="@+id/organiza_evento"
        android:textColor="@android:color/black"
        android:textSize="25dp"   />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_deporte_evento"
        android:id="@+id/title_deporte_evento"
        android:textColor="#ffffffff"
        android:textSize="20dp"    />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/deportes_spinner"
            android:gravity="center"
            android:background="@drawable/border_button"          />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_zona_evento"
        android:id="@+id/title_zona_evento"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        />


        <Spinner
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/zonas_spinner"
        android:gravity="center"
        android:background="@drawable/border_button"    />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_fecha"
        android:id="@+id/title_fecha"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:layout_marginTop="32dp"    />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/date_picker"    />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_hora"
            android:id="@+id/title_hora"
            android:textColor="#ffffffff"
            android:textSize="20dp"
            android:layout_marginTop="32dp"    />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/hour_picker"  />

        <Button
            android:id="@+id/button_crear_evento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_button"
            android:text="@string/btn_crear"
            android:textColor="#ffffffff"
            android:textSize="30dp"
            android:gravity="center"
           />

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
