<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/info2"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:textSize="14dp"
        android:layout_above="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="54dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/flip"
        android:id="@+id/textView7"
        android:layout_marginBottom="63dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView10"
        android:text="@string/bienvenida2"
        android:background="@drawable/bordertittle"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp" />


</RelativeLayout>