<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_registation"
    android:background="@android:color/holo_orange_dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_user"
        android:id="@+id/textView4"
        android:layout_gravity="left"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/Registration"
        android:id="@+id/button_registrar"
        android:background="@drawable/border_button"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/InicioSesion"
        android:id="@+id/button_iniciar_sesion"
        android:background="@drawable/border_button3"
        android:layout_below="@+id/button_registrar"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

</RelativeLayout>