<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ubung.tc.ubungmobile.controlador.DescripcionProgramacionActivity"
    android:id="@+id/programacion_descripcion"
    android:background="@android:color/holo_green_dark">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_organiza"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/organiza"
        android:id="@+id/txt_organiza"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:textColor="#ffffffff" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_marginTop="20dp"
        android:rating="5"
        android:numStars="5"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/image_descripcion_programacion"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:id="@+id/listView_inscritos"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/ratingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextClock
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:id="@+id/textClock_descripcion_programacion"
        android:gravity="center"
        android:textColor="#ffffffff"
        android:textSize="20dp"
        android:background="@android:color/holo_orange_dark"
        android:layout_alignTop="@+id/listView_inscritos"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_inscripcion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/btn_inscripcion"
        android:textColor="#ffffffff"
        android:textSize="30dp"
        android:layout_below="@+id/listView_inscritos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

</RelativeLayout>
